--- a/admin-panel-backend/package.json
+++ b/admin-panel-backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2"
   }
 }
